<resources>
    <string name="app_name">Health App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Account</string>
    <string name="title_notifications">Notifications</string>
    <string name="browse_categories">Browse Categories</string>
    <string name="fresh_recommendations">Fresh Recommendations</string>
    <string name="top_10_doctors">Top 10 Doctors</string>
    <string name="top_10_hospitals">Top 10 Hospitals</string>
    <string name="search_here">Search Here</string>
    <string name="near_by_doctors">Near By Doctors</string>
    <string name="near_by_hospitals">Near By Hospitals</string>
    <string name="bed_availability">Bed Availability :</string>
    <string name="general_beds">General Beds :</string>
    <string name="private_hospital">Private Hospital :</string>
    <string name="icu">ICU Available:</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="call_now">Call Now</string>
    <string name="distance">Distance :</string>
    <string name="private_medical">Private Medical :</string>
    <string name="ambulance_no">Ambulance No. :</string>
    <string name="private_ambulance">Private Ambulance :</string>
    <string name="quantity">Quantity :</string>
    <string name="view_all">View All</string>
</resources>